--- a/app/styles/landing.scss
+++ b/app/styles/landing.scss
@@ -655,8 +655,8 @@ header {
         var(--ui-primary-accent-color-1),
         var(--ui-primary-accent-color-2)
       );
-      height: 48px;
-      width: 48px;
+      height: 36px;
+      width: 36px;
     }
   }
 }
@@ -687,8 +687,8 @@ header {
         var(--ui-primary-accent-color-1),
         var(--ui-primary-accent-color-2)
       );
-      height: 48px;
-      width: 48px;
+      height: 36px;
+      width: 36px;
     }
   }
 }
